# imgui_template

./: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.hpp  CMakeLists.txt  Window.cpp  Window.hpp
